--- a/FrontEnd/mindsafe/src/app/controle/controle/controle.component.scss
+++ b/FrontEnd/mindsafe/src/app/controle/controle/controle.component.scss
@@ -36,8 +36,8 @@
   font-size: 30pt;
   margin-left: 30px;
   font-weight: bold;
-  color: white;
-  text-shadow: 1px 1px 10px #000000;
+  color: black;
+  text-shadow: 1px 1px 10px rgb(255, 255, 255);
 }
 
 .titulo-xs {
