--- a/FrontEnd/mindsafe/src/app/controle/riscos-modal/cadastrar-risco/cadastrar-risco.component.html
+++ b/FrontEnd/mindsafe/src/app/controle/riscos-modal/cadastrar-risco/cadastrar-risco.component.html
@@ -1,7 +1,7 @@
 <h1 matDialogTitle>Cadastrar Risco</h1>
 
 <mat-dialog-content>
-  <div [formGroup]="formCausa" fxLayout="row" fxLayout.sm="column" fxLayout.xs="column" fxLayoutGap="10px">
+  <div [formGroup]="formCausa" fxLayout="column" fxLayoutGap="10px">
     <mat-form-field fxFlex>
       <input matInput placeholder="Descrição" formControlName="nome" #desc>
       <mat-hint align="end">
