--- a/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.html
+++ b/FrontEnd/mindsafe/src/app/menu-sidenav/menu-sidenav/menu-sidenav.component.html
@@ -35,7 +35,7 @@
       <div class="divisor-white"></div>
       <mat-nav-list>
         <a mat-list-item>RESIDÊNCIAS</a>
-        <a mat-list-item>FAMÍLIAS</a>
+        <a mat-list-item [routerLink]="['familias']">FAMÍLIAS</a>
         <a mat-list-item [routerLink]="['pacientes']">PACIENTES</a>
         <a mat-list-item>CONTROLE</a>
         <a mat-list-item [routerLink]="['visitas']">VISITAS</a>
