--- a/FrontEnd/mindsafe/src/app/controle/ubs-modal/cadastrar-ubs/cadastrar-ubs.component.html
+++ b/FrontEnd/mindsafe/src/app/controle/ubs-modal/cadastrar-ubs/cadastrar-ubs.component.html
@@ -26,9 +26,12 @@
       </mat-form-field>
 
       <mat-form-field fxFlex>
-        <mat-select formControlName="bairro" placeholder="Bairro">
-          <mat-option *ngFor="let bairro of bairros" [value]="bairro.nome">{{ bairro.nome }}</mat-option>
-        </mat-select>
+        <input matInput type="text" formControlName="bairro" placeholder="Bairro" [matAutocomplete]="listbairros">
+        <mat-autocomplete #listbairros="matAutocomplete" style="max-height: 100px; overflow-y: auto;">
+          <mat-option *ngFor="let opcao of filtroBairros | async" [value]="opcao.nome">
+            {{ opcao.nome }}
+          </mat-option>
+        </mat-autocomplete>
         <mat-error>
           {{ retornarValidacoes(formEndereco.get('bairro'), 'Bairro') }}
         </mat-error>
