--- a/FrontEnd/mindsafe/src/app/visitas/form-visitas/form-visitas.component.html
+++ b/FrontEnd/mindsafe/src/app/visitas/form-visitas/form-visitas.component.html
@@ -18,13 +18,12 @@
     <mat-slide-toggle formControlName="comparecerUbs"
         class="example-margin"
         [color]='"primary"'
-        [checked]="checked"
-        [disabled]="disabled">
+        (change)="mudarComparecerUbs()"  >
         Comparecer na UBS
     </mat-slide-toggle>
 
     <mat-accordion>
-      <mat-expansion-panel>
+      <mat-expansion-panel [disabled]="!comparecerUbs" (opened)="comparecerUbs == true" (close)="comparecerUbs == false" >
         <mat-expansion-panel-header>
           <mat-panel-title>
             Comparecer
@@ -33,83 +32,35 @@
             Agendar Comparecimento na UBS
           </mat-panel-description>
         </mat-expansion-panel-header>
-    
- <!--        <mat-form-field>
-          <mat-label>First name</mat-label>
-          <input matInput>
-        </mat-form-field>
-    
+
         <mat-form-field>
-          <mat-label>Age</mat-label>
-          <input matInput type="number" min="1">
-        </mat-form-field> -->
+          <mat-label>Data</mat-label>
+          <input  matInput formControlName="dataCompare" [matDatepicker]="datePikerHorario" readonly >
+          <mat-datepicker-toggle  [for]="datePikerHorario" matSuffix></mat-datepicker-toggle>
+          <mat-datepicker #datePikerHorario ></mat-datepicker>
+        </mat-form-field>
+
+        <mat-form-field>
+          <input  matInput [textMask]="{mask: mask, guide:false}"  placeholder="Hora" [formControl]='horarioControl'  >
+        </mat-form-field>
+
+        <mat-form-field>
+          <input type="text"  formControlName="desCompare" matInput placeholder="Descrição" >
+        </mat-form-field>
       </mat-expansion-panel>
-      
+    
     </mat-accordion>
-
-
-
   </div>
 </mat-dialog-content>
 
-
-<!--
-<div class="comparecer-ubs" >
-  <section>
-    <mat-form-field>
-      <mat-label>Data</mat-label>
-      <input matInput [matDatepicker]="dataComparecer" disabled>
-      <mat-datepicker-toggle  [for]="dataComparecer" matSuffix></mat-datepicker-toggle>
-      <mat-datepicker #dataComparecer disabled="false"></mat-datepicker>
-    </mat-form-field>
-
-
-    <form class="agendar" >
-      <label for="data">Data</label>
-      <input type="date" id="data">
-
-      <label for="hora">Hora</label>
-      <input type="time" id="hora">
-
-      <label for="descricao">Descrição</label>
-      <input type="text" id="descricao">
-    </form>
-
-  </section>
-
-</div>
-
- -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Cancelar</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Confirmar</button>
+<mat-dialog-actions fxLayout='row' fxLayout.xs='column' fxLayoutGap='10px' >
+  <button color='warn' mat-raised-button matDialogClose fxFlex > 
+    CANCELAR 
+    <mat-icon class="material-icons" >cancel</mat-icon>
+  </button>
+  <br>
+  <button color='primary' mat-raised-button fxFlex >
+    Salvar
+    <mat-icon class="material-icons" >send</mat-icon>
+  </button>
 </mat-dialog-actions>
