--- a/FrontEnd/mindsafe/src/app/familias/familias-form-modal/familias-form-modal.component.html
+++ b/FrontEnd/mindsafe/src/app/familias/familias-form-modal/familias-form-modal.component.html
@@ -8,13 +8,16 @@
 
 <mat-dialog-actions align="center" fxLayout="row" fxLayout.xs="column" fxLayoutGap="10px">
   <button mat-raised-button color='warn' matDialogClose fxFlex>
+    CANCELAR
     <mat-icon class="material-icons">
       cancel
     </mat-icon>
   </button><br>
 
   <button mat-raised-button color='primary' fxFlex>
+    CONFIRMAR
     <mat-icon class="material-icons">
+
       send
     </mat-icon>
   </button>
