--- a/FrontEnd/mindsafe/src/app/visitas/form-visitas/form-visitas.component.html
+++ b/FrontEnd/mindsafe/src/app/visitas/form-visitas/form-visitas.component.html
@@ -49,6 +49,19 @@
         </mat-form-field>
       </mat-expansion-panel>
 
+      <mat-form-field>
+        <mat-label>Proxima Visita</mat-label>
+        <input  matInput formControlName="proximaVisita" [matDatepicker]="datePikerProxima" readonly >
+        <mat-datepicker-toggle  [for]="datePikerProxima" matSuffix></mat-datepicker-toggle>
+        <mat-datepicker #datePikerProxima ></mat-datepicker>
+      </mat-form-field>
+
+      <mat-form-field>
+        <input  matInput [textMask]="{mask: mask, guide:false}"  placeholder="Hora" [formControl]='horarioProximaVisitaControl'  >
+      </mat-form-field>
+
+
+
     </mat-accordion>
   </div>
 </mat-dialog-content>
@@ -59,8 +72,9 @@
     <mat-icon class="material-icons" >cancel</mat-icon>
   </button>
   <br>
-  <button color='primary' mat-raised-button fxFlex >
+  <button color='primary' mat-raised-button [disabled]="formVisitas.invalid" (click)="cadastrar()" fxFlex >
     Salvar
     <mat-icon class="material-icons" >send</mat-icon>
   </button>
+
 </mat-dialog-actions>
