--- a/FrontEnd/mindsafe/src/app/visitas/form-visitas/form-visitas.component.html
+++ b/FrontEnd/mindsafe/src/app/visitas/form-visitas/form-visitas.component.html
@@ -4,19 +4,14 @@
   <form [formGroup]="formVisitas" fxLayout="column" fxLayoutGap="10px">
     <mat-form-field fxFlex>
       <mat-label>Data da Visita</mat-label>
-      <input matInput formControlName="dataVisita" [matDatepicker]="meuDatePicker" readonly >
-      <mat-datepicker-toggle  [for]="meuDatePicker" matSuffix></mat-datepicker-toggle>
+      <input matInput formControlName="dataVisita" [matDatepicker]="meuDatePicker" disabled readonly >
+      <mat-datepicker-toggle [for]="meuDatePicker" matSuffix></mat-datepicker-toggle>
       <mat-datepicker #meuDatePicker disabled="true"></mat-datepicker>
     </mat-form-field>
 
-    <mat-form-field appearance="fill" fxFlex>
-      <mat-label>Anotações</mat-label>
-      <textarea matInput formControlName="anotacoes" rows="6"></textarea>
-    </mat-form-field>
-
-    <mat-form-field fxFlex>
+    <mat-form-field fxFlex *ngIf="!data">
       <mat-select formControlName="pessoa" placeholder="Paciente">
-        <mat-option *ngFor="let paciente of pacientes$ | async">
+        <mat-option *ngFor="let paciente of pacientes$ | async" [value]="paciente">
           {{ paciente.nome }}
         </mat-option>
       </mat-select>
@@ -25,14 +20,17 @@
       </mat-error>
     </mat-form-field>
 
-    <mat-slide-toggle formControlName="comparecerUbs"
-        [color]='"primary"'
-        (change)="mudarComparecerUbs()" fxFlex>
+    <mat-form-field appearance="fill" fxFlex>
+      <mat-label>Anotações</mat-label>
+      <textarea matInput formControlName="anotacoes" rows="6"></textarea>
+    </mat-form-field>
+
+    <mat-slide-toggle formControlName="comparecerUbs" color='primary' (change)="mudarComparecerUbs()" fxFlex>
         Comparecer na UBS
     </mat-slide-toggle>
 
     <mat-accordion fxFlex>
-      <mat-expansion-panel [disabled]="!comparecerUbs" (opened)="comparecerUbs == true" (close)="comparecerUbs == false" >
+      <mat-expansion-panel [disabled]="!comparecerUbs" [expanded]="comparecerUbs === true">
         <mat-expansion-panel-header>
           <mat-panel-title>
             Comparecer
@@ -51,18 +49,21 @@
 
         <mat-form-field>
           <input matInput [textMask]="{mask: mask, guide:false}" placeholder="Hora" [formControl]='horarioControl'>
+          <mat-error>
+            {{ retornarValidacoes(horarioControl, 'Horário') }}
+          </mat-error>
         </mat-form-field>
 
         <mat-form-field>
-          <input type="text"  formControlName="desCompare" matInput placeholder="Descrição" >
+          <input formControlName="desCompare" matInput placeholder="Descrição" >
         </mat-form-field>
       </mat-expansion-panel>
     </mat-accordion>
 
     <mat-form-field fxFlex>
       <mat-label>Proxima Visita</mat-label>
-      <input  matInput formControlName="proximaVisita" [matDatepicker]="datePikerProxima" readonly >
-      <mat-datepicker-toggle  [for]="datePikerProxima" matSuffix></mat-datepicker-toggle>
+      <input matInput formControlName="proximaVisita" [matDatepicker]="datePikerProxima" readonly >
+      <mat-datepicker-toggle [for]="datePikerProxima" matSuffix></mat-datepicker-toggle>
       <mat-datepicker #datePikerProxima ></mat-datepicker>
       <mat-error>
         {{ retornarValidacoes(formVisitas.get('proximaVisita'), 'Próxima Visita') }}
@@ -70,7 +71,10 @@
     </mat-form-field>
 
     <mat-form-field fxFlex>
-      <input  matInput [textMask]="{mask: mask, guide:false}"  placeholder="Hora" [formControl]='horarioProximaVisitaControl'  >
+      <input  matInput [textMask]="{mask: mask, guide:false}" placeholder="Hora" [formControl]='horarioProximaVisitaControl'>
+      <mat-error>
+        {{ retornarValidacoes(horarioProximaVisitaControl, 'Horário') }}
+      </mat-error>
     </mat-form-field>
   </form>
 </mat-dialog-content>
@@ -81,7 +85,7 @@
     <mat-icon class="material-icons">cancel</mat-icon>
   </button><br>
 
-  <button color='primary' mat-raised-button [disabled]="formVisitas.invalid" (click)="cadastrar()" fxFlex>
+  <button color='primary' mat-raised-button [disabled]="formVisitas.invalid || horarioProximaVisitaControl.invalid" (click)="onConfirm()" fxFlex>
     CONFIRMAR
     <mat-icon class="material-icons">{{ iconBtn }}</mat-icon>
   </button>
