--- a/FrontEnd/mindsafe/src/app/visitas/visitas/visitas.component.scss
+++ b/FrontEnd/mindsafe/src/app/visitas/visitas/visitas.component.scss
@@ -79,13 +79,15 @@ mat-card-content h2 {
 }
 
 #div-container {
-  margin: 0 56px;
+  margin: 0 40px;
 }
 
 mat-list {
   border-radius: 5px;
   box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.4);
-  margin: 10px 0px;
+  margin: 10px 0px 65px;
+  max-width: 100%;
+  overflow-x: auto;
 }
 
 mat-list-item {
@@ -93,11 +95,17 @@ mat-list-item {
 }
 
 h2 {
+  margin-top: 30px;
   color: #707070;
 }
 
-#visitas-pendentes, #visitas-atrasadas {
-  max-height: 180px;
+#visitas-concluidas {
+  max-height: 290px;
+  overflow-y: auto;
+}
+
+#visitas-pendentes, #visitas-atrasadas{
+  max-height: 120px;
   overflow-y: auto;
 }
 
